[251120] 파일변형 업데이트

--- a/make_prompt.ipynb
+++ b/make_prompt.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6896e25",
    "metadata": {},
    "outputs": [],
@@ -18,83 +18,69 @@
     "from tools.core.llm_query import LLMQuery\n",
     "\n",
     "llm = LLMQuery()\n",
-    "system_prompt = \"\"\"당신은 프롬프트 엔지니어입니다. 아래와 같은 원리를 담아 문제를 변형하는 프롬프트를 만들려고 합니다.\n",
-    "### 옳은 것 → 옳지 않은 것 복수선택형\n",
+    "system_prompt = \"\"\"당신은 프롬프트 엔지니어입니다. 아래 예시처럼 '새로운 질문'을 만드는 프롬프트를 짜려고 합니다. \n",
     "\n",
-    "- (5지선다) 어떤 문제를 답2개/3개/4개/5개 정하고\n",
-    "    - 5개: 옳은 것 0개 = 본래 O선지 1개 → X선지 1개 = 옳지 않은 것 5개\n",
-    "    - 4개: 옳은 것 1개 = 본래 O선지 1개 그대로 사용 = 옳지 않은 것 4개\n",
-    "    - 3개: 옳은 것 2개 = 본래 O선지 1개 + X선지 중 1개 → O선지 = 옳지 않은 것 3개\n",
-    "    - 2개: 옳은 것 3개 = 본래 O선지 1개 + X선지 중 2개 → O선지 2개 = 옳지 않은 것 2개\n",
-    "- (4지선다) 어떤 문제를 답2개/3개/4개 할지 정하고\n",
-    "    - 4개: 옳은 것 0개 = 본래 O선지 1개 → X선지 1개 = 옳지 않은 것 4개\n",
-    "    - 3개: 옳은 것 1개 = 본래 O선지 1개 그대로 사용 = 옳지 않은 것 3개 ⇒ 단일선택형 재(변형)검증\n",
-    "    - 2개: 옳지 않은 것 2개 = 본래 O선지 1개 + X선지 중 1개 → O선지 = 옳지 않은 것 2개\n",
+    "1. question과 original_question을 비교하고, 차이를 확인하세요. \n",
+    "2. 옳은 것을 고르는 문제인지, 옳지 않은 것을 고르는 문제인지는 question에 따릅니다. \n",
+    "3. question이 '어떤 주제에 대해' 옳은 것/옳지 않은 것을 고르는 것인지 명확하지 않다면 original_question의 질문과 questions의 '옳은 것/옳지 않은 것'을 조합해 질문을 만드세요. \n",
+    "4. question에 주제가 있고, 옳은 것/옳지 않은 것을 고르는 것이 명확하다면 question을 그대로 사용하세요.\n",
     "\n",
-    "아래 프롬프트는 반대의 상황을 위해 만들어진 프롬프트입니다.\n",
-    "모순 없이 위의 상황을 반영할 수 있도록 수정해주세요.\n",
+    "예시\n",
+    "'question': '옳은 것을 모두 고르시오.'\n",
+    "'original_question': '고객과 생산적인 대화를 위한 방법으로 다음 설명 중 가장 적절하지 않은 것은?'\n",
+    "-> 새로운 질문: '고객과 생산적인 대화를 위한 방법으로 다음 설명 중 옳은 것을 모두 고르시오.'\n",
     "\"\"\"\n",
     "\n",
-    "target_answer_count = 3\n",
-    "options_ct = 5\n",
-    "question = {}\n",
-    "question['answer'] = \"②\"\n",
+    "# target_answer_count = 3\n",
+    "# options_ct = 5\n",
+    "# question = {}\n",
+    "# question['answer'] = \"②\"\n",
     "\n",
     "\n",
-    "user_prompt = f\"\"\"\n",
-    "당신은 25년 경력의 문제 출제 전문가입니다.\n",
-    "\n",
-    "검증\n",
-    "- {target_answer_count}가 2 이상 {options_ct} 이하인지 확인합니다. 범위를 벗어나면 오류를 보고합니다.\n",
-    "- 선택지 수({options_ct})와 순서는 반드시 유지합니다.\n",
-    "\n",
-    "변형 규칙\n",
-    "- 문제 지문은 “옳은 것을 모두 고르시오”로 바꿉니다. 그 외 본문, 수식(LaTeX), 표, 선택지 문구(변형 대상 제외)는 원형을 최대한 보존합니다.\n",
-    "- 목표 오답 수 = {options_ct - target_answer_count}.\n",
-    "  - 목표 오답 수 = 0: 원래 오답({question.get('answer', '')})을 최소 수정으로 ‘옳음’으로 뒤집습니다. 그 외 선택지는 변경하지 않습니다. 결과적으로 모든 선택지가 옳음입니다.\n",
-    "  - 목표 오답 수 = 1: 원래 오답을 그대로 유지합니다. 그 외 선택지는 변경하지 않습니다. 결과적으로 원래 오답 1개만 남습니다(단일선택형 재검증).\n",
-    "  - 목표 오답 수 ≥ 2: 원래 오답은 그대로 유지하고, 추가로 (목표 오답 수 - 1)개 만큼 원래 옳았던 선택지를 골라 최소 수정으로 ‘옳지 않음’으로 만듭니다.\n",
-    "- 최소 수정 원칙\n",
-    "  - 허용되는 변경 예: 수치/단위/부등호/최대↔최소/있다↔없다/반드시↔경우도 있다/조건의 범위·한정어 조정 등.\n",
-    "  - 제공된 해설의 논리 범위를 벗어나는 임의 창작 금지. 외부 사실 의존 금지.\n",
-    "  - 변형 대상이 아닌 선택지의 문구는 절대 수정하지 않습니다.\n",
-    "- 선택지 선정 가이드\n",
-    "  - 변형이 필요한 경우, 가장 적은 토큰 변경으로 참⇄거짓을 뒤집기 쉬운 선택지부터 우선 선택합니다.\n",
-    "  - 의미 일관성 유지: 변형으로 인해 다른 선택지와 모순되거나 문제 전체의 전제가 깨지지 않도록 합니다.\n",
-    "\n",
-    "정답과 설명\n",
-    "- 정답(answer)은 변형 후 ‘옳은’ 선택지의 번호 목록입니다. 번호는 \"①\",\"②\",... 형식의 문자열로, 오름차순으로 정렬합니다.\n",
-    "- explanation에는 모든 선택지를 순회하며 다음 형식으로 간단·명확히 기술합니다.\n",
-    "  - “① 옳다: 근거 …”\n",
-    "  - “③ 옳지 않다(원래 오답): 근거 …”\n",
-    "  - “⑤ 옳지 않다(변형): 변경 ‘높다→낮다’, 근거 …”\n",
-    "- 변형된 선택지는 반드시 어떤 단어/수치/기호를 어떻게 바꿨는지 구체적으로 한 토큰 수준으로 표기합니다.\n",
-    "\n",
-    "출력 형식(JSON)\n",
-    "{{\n",
-    "  \"question_id\": \"문제번호\",\n",
-    "  \"question\": \"변형된 문제(옳은 것을 모두 고르시오)\",\n",
-    "  \"options\": [\"① 선택지1\", \"② 선택지2\", ...],  \n",
-    "  \"answer\": [\"정답번호1\", \"정답번호2\", ...], \n",
-    "  \"explanation\": \"① 옳다: … / ③ 옳지 않다(원래 오답): … / ⑤ 옳지 않다(변형): 변경 ‘…→…’, 근거 …\"\n",
-    "}}\n",
-    "\n",
-    "비고\n",
-    "- 목표 오답 수 계산식으로 일관되게 제어합니다.\n",
-    "  - 추가로 만들어야 할 오답 수 = {max(0, options_ct - target_answer_count - 1)}.\n",
-    "  - 단, {options_ct - target_answer_count} = 0이면 원래 오답을 ‘옳음’으로 뒤집고 추가 오답은 0입니다.\n",
-    "- 선택지 레이블(①, ②, …)과 원문 순서를 유지합니다.\n",
-    "- 최종적으로 옳음 개수 = {target_answer_count}, 오답 개수 = {options_ct - target_answer_count}임을 자기점검합니다.\n",
-    "\"\"\"\n",
+    "user_prompt = f\"\"\"\"\"\"\n",
     "response = llm.query_openrouter(system_prompt, user_prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2beed4d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "아래 프롬프트를 그대로 사용하세요.\n",
+      "\n",
+      "작업:\n",
+      "- 주어진 question과 original_question을 비교해 ‘새로운 질문’ 한 줄을 생성한다.\n",
+      "\n",
+      "입력:\n",
+      "- question: {여기에 입력}\n",
+      "- original_question: {여기에 입력}\n",
+      "\n",
+      "규칙:\n",
+      "1) question과 original_question을 비교해\n",
+      "   - 주제(무엇에 대한 질문인지)\n",
+      "   - 판단 방향(옳은 것 vs. 옳지 않은 것, 적절한 vs. 부적절한 등)을 파악한다.\n",
+      "2) 최종 판단 방향은 question을 따른다. question에 방향이 없으면 original_question을 따른다.\n",
+      "3) question에 주제가 없거나 불명확하면, original_question에서 주제만 추출해 question의 형식/방향과 결합한다.\n",
+      "   - 주제 추출 시 ‘다음 중/설명 중/가장/옳은/옳지 않은/적절(하지) 않은/맞는/틀린/해당하지 않는’ 등 판단 표현은 제거하고, 대상/맥락만 남긴다.\n",
+      "4) question에 주제와 판단 방향이 모두 명확하면 question을 그대로 사용한다.\n",
+      "5) 어투와 종결(‘…고르시오.’, ‘…것은?’ 등)은 question의 형식을 최대한 유지한다.\n",
+      "6) 의미 왜곡 없이 자연스러운 한국어로 다듬되, 불필요한 수식어는 추가하지 않는다.\n",
+      "7) 출력 형식은 한 줄로만: 새로운 질문: {문장}\n",
+      "\n",
+      "예시 입력:\n",
+      "- question: 옳은 것을 모두 고르시오.\n",
+      "- original_question: 고객과 생산적인 대화를 위한 방법으로 다음 설명 중 가장 적절하지 않은 것은?\n",
+      "\n",
+      "예시 출력:\n",
+      "새로운 질문: 고객과 생산적인 대화를 위한 방법으로 다음 설명 중 옳은 것을 모두 고르시오.\n"
+     ]
+    }
+   ],
    "source": [
     "print(response)"
    ]
@@ -408,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "aic",
    "language": "python",
    "name": "python3"
   },
@@ -422,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
