[251120] 서술형 및 파일정리

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -177,16 +177,25 @@
    "source": [
     "import os\n",
     "\n",
-    "# from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/4_multiple_exam\"\n",
-    "from_path = \"/Users/jinym/Downloads/Midm-2.0-Mini-Instruct\"\n",
-    "# to_path = \"yjmoon@oci001:/home/yjmoon/\"\n",
-    "to_path = \"yjmoon@oci004:/srv4-data/vanilla_models/\"\n",
+    "from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/8_multiple_exam_+\"\n",
+    "to_path = \"yjmoon@oci004:/home/yjmoon/\"\n",
+    "# to_path = \"yjmoon@oci004:/srv4-data/vanilla_models/\"\n",
     "\n",
     "\n",
     "# # 업로드\n",
     "os.system(f\"scp -r {from_path} {to_path}\")\n",
     "# # for ss in file:\n",
     "#     # os.system(f\"scp -r /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/3C/Lv3_4/{ss} yjmoon@oci004:/home/yjmoon/FINAL/{ss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.system(\"scp -r yjmoon@oci004:/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/8_multiple_exam_+/exam_+_result/* /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/8_multiple_exam_+/exam_+_result\")"
    ]
   },
   {
