--- a/test.ipynb
+++ b/test.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "python: can't open file '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/hhhhh.py': [Errno 2] No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 새로운거 빈 도메인만..\n",
     "\n",
@@ -201,26 +193,26 @@
     "# EXAM_DIR = os.path.join(os.path.expanduser(\"~\"), '4_multiple_exam')\n",
     "\n",
     "for exams in os.listdir(EXAM_DIR):\n",
-    "    # if exams == \"1st\":\n",
-    "    #     first_exam = []\n",
-    "    #     for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "    #         with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "    #             first_exam += json.load(f)\n",
-    "    # elif exams == \"2nd\":\n",
-    "    #     second_exam = []\n",
-    "    #     for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "    #         with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "    #             second_exam += json.load(f)\n",
-    "    # elif exams == \"3rd\":\n",
-    "    #     third_exam = []\n",
-    "    #     for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "    #         with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "    #             third_exam += json.load(f)\n",
-    "    # elif exams == \"4th\":\n",
-    "    #     fourth_exam = []\n",
-    "    #     for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "    #         with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "    #             fourth_exam += json.load(f)\n",
+    "    if exams == \"1st\":\n",
+    "        first_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, 'backup', exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, 'backup', exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                first_exam += json.load(f)\n",
+    "    elif exams == \"2nd\":\n",
+    "        second_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, 'backup', exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, 'backup', exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                second_exam += json.load(f)\n",
+    "    elif exams == \"3rd\":\n",
+    "        third_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, 'backup', exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, 'backup', exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                third_exam += json.load(f)\n",
+    "    elif exams == \"4th\":\n",
+    "        fourth_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, 'backup', exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, 'backup', exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                fourth_exam += json.load(f)\n",
     "    if exams == \"5th\":\n",
     "        fifth_exam = []\n",
     "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
@@ -232,44 +224,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/5th/5th_evaluation_many.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "from tools.pipeline.config import ONEDRIVE_PATH\n",
     "\n",
-    "model_name = 'many'\n",
-    "excel_path = os.path.join(ONEDRIVE_PATH, f'evaluation/eval_data/6_exam_evaluation/5th/5th_evaluation_{model_name}.xlsx')\n",
+    "time = '5th'\n",
+    "model_name = 'gemini-3-pro-preview'\n",
+    "excel_path = os.path.join(ONEDRIVE_PATH, f'evaluation/eval_data/4_multiple_exam/exam_result/{time}/{time}_evaluation_{model_name}.xlsx')\n",
     "print(excel_path)\n",
-    "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')"
+    "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')\n",
+    "\n",
+    "\n",
+    "exams = {\n",
+    "    '1st': first_exam,\n",
+    "    '2nd': second_exam,\n",
+    "    '3rd': third_exam,\n",
+    "    '4th': fourth_exam,\n",
+    "    '5th': fifth_exam\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "empty_ids = pred_wide[pred_wide['google/gemini-2.5-pro'].isna()].id.tolist()\n",
-    "# print(pred_wide.columns[-1])\n",
+    "empty_ids = pred_wide[pred_wide[pred_wide.columns[-1]].isna()].id.tolist()\n",
+    "print(pred_wide.columns[-1])\n",
     "print(empty_ids)"
    ]
   },
@@ -281,7 +267,7 @@
    "source": [
     "new_json = []\n",
     "for q in empty_ids:\n",
-    "    for m in fifth_exam:\n",
+    "    for m in exams[time]:\n",
     "        if m['file_id']+\"_\"+m['tag'] == q:\n",
     "            # print(m)\n",
     "            new_json.append(m)\n",
@@ -302,17 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Excel 파일 업데이트 완료: /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/5th/5th_evaluation_many.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "!python tools/main_pipeline.py --steps evaluate_exams --eval_exam_dir evaluation/model_new.json --eval_models google/gemini-3-pro-preview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
     "import pandas as pd\n",
@@ -465,6 +452,216 @@
     "        subdomain_stats.to_excel(writer, index=False, sheet_name=\"Subdomain별문제수\")\n",
     "\n",
     "print(f\"✅ Excel 파일 업데이트 완료: {excel_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 한번에 읽고 한번에 정확도 뽑기\n",
+    "#!/usr/bin/env python3\n",
+    "\"\"\"\n",
+    "exam_+_result 디렉토리의 엑셀 파일들에서 정확도 시트를 읽고\n",
+    "1st/2nd/3rd/4th/5th, 모델명, 정확도(소수점 넷째자리까지)를 출력하는 스크립트\n",
+    "\"\"\"\n",
+    "\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import re\n",
+    "from pathlib import Path\n",
+    "from typing import Optional\n",
+    "\n",
+    "def extract_evaluation_number(filename: str) -> Optional[str]:\n",
+    "    \"\"\"파일명에서 평가 차수(1st, 2nd, 3rd, 4th, 5th) 추출\"\"\"\n",
+    "    # 파일명에서 숫자와 st/nd/rd/th 패턴 찾기\n",
+    "    pattern = r'(\\d+)(st|nd|rd|th)'\n",
+    "    match = re.search(pattern, filename, re.IGNORECASE)\n",
+    "    if match:\n",
+    "        return match.group(0).lower()\n",
+    "    return None\n",
+    "\n",
+    "def extract_model_name(filename: str) -> str:\n",
+    "    \"\"\"파일명에서 모델명 추출\"\"\"\n",
+    "    # 파일명에서 확장자 제거\n",
+    "    basename = os.path.splitext(os.path.basename(filename))[0]\n",
+    "    # \"evaluation_\" 이후의 부분을 모델명으로 추출\n",
+    "    if 'evaluation_' in basename:\n",
+    "        model_name = basename.split('evaluation_', 1)[1]\n",
+    "        return model_name\n",
+    "    return basename\n",
+    "\n",
+    "def read_accuracy_sheet(excel_path: str) -> Optional[pd.DataFrame]:\n",
+    "    \"\"\"엑셀 파일에서 '정확도' 시트 읽기\"\"\"\n",
+    "    try:\n",
+    "        # 먼저 시트 이름 확인\n",
+    "        excel_file = pd.ExcelFile(excel_path)\n",
+    "        sheet_names = excel_file.sheet_names\n",
+    "        \n",
+    "        # '정확도' 시트 찾기\n",
+    "        accuracy_sheet = None\n",
+    "        for sheet in sheet_names:\n",
+    "            if '정확도' in sheet:\n",
+    "                accuracy_sheet = sheet\n",
+    "                break\n",
+    "        \n",
+    "        if accuracy_sheet is None:\n",
+    "            print(f\"⚠️  {excel_path}: '정확도' 시트를 찾을 수 없습니다. (시트 목록: {sheet_names})\")\n",
+    "            return None\n",
+    "        \n",
+    "        # 정확도 시트 읽기\n",
+    "        df = pd.read_excel(excel_path, sheet_name=accuracy_sheet)\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ {excel_path} 읽기 오류: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def print_accuracy_results(directory: str = \"oci_result\"):\n",
+    "    \"\"\"디렉토리 내의 모든 엑셀 파일에서 정확도 정보 출력\"\"\"\n",
+    "    base_path = Path(directory)\n",
+    "    \n",
+    "    if not base_path.exists():\n",
+    "        print(f\"❌ 디렉토리를 찾을 수 없습니다: {directory}\")\n",
+    "        return\n",
+    "    \n",
+    "    # 엑셀 파일 목록 가져오기\n",
+    "    excel_files = sorted(base_path.glob(\"*.xlsx\"))\n",
+    "    \n",
+    "    if not excel_files:\n",
+    "        print(f\"⚠️  {directory} 디렉토리에 엑셀 파일이 없습니다.\")\n",
+    "        return\n",
+    "    \n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"정확도 결과 출력 ({len(excel_files)}개 파일)\")\n",
+    "    print(f\"{'='*80}\\n\")\n",
+    "    print(f\"{'차수':<8} {'모델명':<50} {'정확도':<15}\")\n",
+    "    print(f\"{'-'*80}\")\n",
+    "    \n",
+    "    results = []\n",
+    "    \n",
+    "    for excel_file in excel_files:\n",
+    "        # 평가 차수 추출\n",
+    "        eval_number = extract_evaluation_number(excel_file.name)\n",
+    "        if eval_number is None:\n",
+    "            eval_number = \"N/A\"\n",
+    "        \n",
+    "        # 모델명 추출\n",
+    "        model_name = extract_model_name(excel_file.name)\n",
+    "        \n",
+    "        # 정확도 시트 읽기\n",
+    "        df_accuracy = read_accuracy_sheet(str(excel_file))\n",
+    "        \n",
+    "        if df_accuracy is not None and not df_accuracy.empty:\n",
+    "            # 정확도 컬럼 찾기\n",
+    "            accuracy_col = None\n",
+    "            model_col = None\n",
+    "            \n",
+    "            # 가능한 정확도 컬럼 이름들\n",
+    "            for col in df_accuracy.columns:\n",
+    "                col_lower = str(col).lower()\n",
+    "                if 'accuracy' in col_lower or '정확도' in col_lower or 'acc' in col_lower:\n",
+    "                    accuracy_col = col\n",
+    "                if 'model' in col_lower or '모델' in col_lower:\n",
+    "                    model_col = col\n",
+    "            \n",
+    "            # 정확도 값 찾기\n",
+    "            if accuracy_col:\n",
+    "                # 각 행의 정확도 출력 (모델별로 여러 행이 있을 수 있음)\n",
+    "                for idx, row in df_accuracy.iterrows():\n",
+    "                    accuracy_value = row[accuracy_col]\n",
+    "                    \n",
+    "                    # 모델명이 시트에 있는 경우 사용\n",
+    "                    if model_col and model_col in df_accuracy.columns:\n",
+    "                        sheet_model_name = str(row[model_col])\n",
+    "                    else:\n",
+    "                        sheet_model_name = model_name\n",
+    "                    \n",
+    "                    # 정확도 값을 숫자로 변환\n",
+    "                    try:\n",
+    "                        if pd.isna(accuracy_value):\n",
+    "                            continue\n",
+    "                        accuracy_float = float(accuracy_value)\n",
+    "                        accuracy_str = f\"{accuracy_float:.4f}\"\n",
+    "                        \n",
+    "                        results.append({\n",
+    "                            'eval': eval_number,\n",
+    "                            'model': sheet_model_name,\n",
+    "                            'accuracy': accuracy_float\n",
+    "                        })\n",
+    "                        \n",
+    "                        print(f\"{eval_number:<8} {sheet_model_name:<50} {accuracy_str:<15}\")\n",
+    "                    except (ValueError, TypeError):\n",
+    "                        continue\n",
+    "            else:\n",
+    "                # 정확도 컬럼을 찾지 못한 경우, 첫 번째 숫자 컬럼을 정확도로 간주\n",
+    "                print(f\"⚠️  {excel_file.name}: 정확도 컬럼을 찾을 수 없습니다. (컬럼: {list(df_accuracy.columns)})\")\n",
+    "        else:\n",
+    "            print(f\"⚠️  {excel_file.name}: 정확도 데이터를 읽을 수 없습니다.\")\n",
+    "    \n",
+    "    print(f\"{'-'*80}\")\n",
+    "    print(f\"\\n총 {len(results)}개 결과 출력 완료\\n\")\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     import sys\n",
+    "    \n",
+    "#     # 디렉토리 경로 설정\n",
+    "#     # 명령줄 인자로 디렉토리 경로를 받을 수 있음\n",
+    "#     if len(sys.argv) > 1:\n",
+    "#         result_dir = sys.argv[1]\n",
+    "#     else:\n",
+    "#         # 기본값: exam_+_result 또는 oci_result\n",
+    "#         # 사용자가 원하는 디렉토리 경로로 변경 가능\n",
+    "#         result_dir = \"oci_result\"  # 또는 \"exam_+_result\" 등\n",
+    "    \n",
+    "#     print_accuracy_results(result_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "정확도 결과 출력 (20개 파일)\n",
+      "================================================================================\n",
+      "\n",
+      "차수       모델명                                                정확도            \n",
+      "--------------------------------------------------------------------------------\n",
+      "1st      anthropic/claude-3.7-sonnet                        0.3160         \n",
+      "1st      anthropic/claude-sonnet-4.5                        0.3580         \n",
+      "1st      google/gemini-2.5-flash                            0.3497         \n",
+      "1st      openai/gpt-4.1                                     0.3290         \n",
+      "2nd      anthropic/claude-3.7-sonnet                        0.3390         \n",
+      "2nd      anthropic/claude-sonnet-4.5                        0.3840         \n",
+      "2nd      google/gemini-2.5-flash                            0.3574         \n",
+      "2nd      openai/gpt-4.1                                     0.3290         \n",
+      "3rd      anthropic/claude-3.7-sonnet                        0.3310         \n",
+      "3rd      anthropic/claude-sonnet-4.5                        0.3524         \n",
+      "3rd      google/gemini-2.5-flash                            0.3647         \n",
+      "3rd      openai/gpt-4.1                                     0.3410         \n",
+      "4th      anthropic/claude-3.7-sonnet                        0.3550         \n",
+      "4th      anthropic/claude-sonnet-4.5                        0.3500         \n",
+      "4th      google/gemini-2.5-flash                            0.3558         \n",
+      "4th      openai/gpt-4.1                                     0.3624         \n",
+      "5th      anthropic/claude-3.7-sonnet                        0.3250         \n",
+      "5th      anthropic/claude-sonnet-4.5                        0.3720         \n",
+      "5th      google/gemini-2.5-flash                            0.3410         \n",
+      "5th      openai/gpt-4.1                                     0.3480         \n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "총 20개 결과 출력 완료\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_accuracy_results('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/8_multiple_exam_+/exam_+_result')"
    ]
   },
   {
