--- a/make_prompt.ipynb
+++ b/make_prompt.ipynb
@@ -385,8 +385,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0f3ec7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = f\"\"\"\n",
+    "다음 서술형 질문과 키워드, 원래 질문/선지/정답/해설을 활용하여 모범답안을 만들려고 합니다.\n",
+    "아래 입력 값은 예시로, 아래와 같은 문제들이 들어왔을 때 모범답안을 작성할 수 있는 프롬프트를 작성해주세요.\n",
+    "주어진 정보 이외에 추가적인 정보를 사용하지 않도록 주의해야합니다.\n",
+    "\"\"\"\n",
+    "\n",
+    "user_prompt = f\"\"\"\n",
+    "====== 예시 =====\n",
+    "'서술형 질문': '다음 키워드를 활용하여 독점적 경쟁시장에 관해 서술하시오.\\n키워드: 공급자 역할, 장기균형 이윤, 생산량 수준, 상품 차별화, 상품 대체성'\n",
+    "'원래 질문': '독점적 경쟁시장에 관한 설명으로 옳지 않은 것은?',\n",
+    " '원래 선지': ['① 수많은 공급자가 가격 수용자로 행동한다.',\n",
+    "  '② 장기균형에서 기업들의 경제학적 이윤은 0이다.',\n",
+    "  '③ 장기균형에서는 평균비용곡선의 최저점보다 더 적은 양을 생산한다.',\n",
+    "  '④ 수많은 공급자가 서로 차별화된 상품을 공급하지만, 공급된 상품들의 대체성이 높다.'],\n",
+    " '원래 정답': '①',\n",
+    "'선지별 해설': '독점적 경쟁시장에서 공급자는 가격 수용자가 아니라 가격 설정자로서 행동한다.\\n② 독점적 경쟁시장에 기업들은 정상이윤만 획득하기에 경제학적 이윤은 0이 된다.\\n③ 독점적 경쟁시장에서 장기균형조건은 P=SAC=LAC>MR=SMC=LMC 이므로 생산량은 평균비용곡선의 최저점보다 적은 양을 생산한다.\\n④ 차별화된 상품들이 재화에 근본적인 차이가 날 정도로 차이가 존재하지 않아 공급된 상품들의 대체성이 높다.'\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5bbbb2f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## 프롬프트\n",
+      "\n",
+      "당신은 주어진 여러 정보를 조합하여 서술형 문제에 대한 '모범답안'을 생성하는 AI입니다.\n",
+      "\n",
+      "**[역할]**\n",
+      "- '서술형 질문'의 요구사항을 정확히 파악합니다.\n",
+      "- '원래 질문/선지/정답/해설'에서 서술형 질문에 답변하는 데 필요한 핵심 정보를 추출합니다.\n",
+      "- 추출한 정보와 '키워드'를 논리적으로 엮어 하나의 완성된 글로 재구성합니다.\n",
+      "\n",
+      "**[수행 절차]**\n",
+      "1.  **주제 파악:** '서술형 질문'과 '키워드'를 통해 모범답안이 다루어야 할 핵심 주제와 포함해야 할 요소를 확인합니다.\n",
+      "2.  **정보 추출:** '원래 선지'와 '선지별 해설'을 분석하여 각 '키워드'에 해당하는 구체적인 내용을 찾아냅니다.\n",
+      "3.  **논리적 구성:** 추출한 정보들을 활용하여 '서술형 질문'에 대한 답변이 되도록 문장을 자연스럽게 연결하고 문단을 구성합니다. 이때, 모든 '키워드'가 포함되어야 합니다.\n",
+      "4.  **답안 생성:** 위의 과정을 거쳐 최종 '모범답안'을 작성합니다.\n",
+      "\n",
+      "**[규칙]**\n",
+      "- **절대 외부 지식을 사용하지 마세요.** 반드시 '원래 질문/선지/정답/해설'에 명시된 정보만을 근거로 답안을 작성해야 합니다.\n",
+      "- 제시된 모든 '키워드'를 반드시 답안에 포함해야 합니다.\n",
+      "- 최종 결과물은 \"모범답안:\"으로 시작하는 완성된 형태의 글이어야 합니다.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "**[입력 형식]**\n",
+      "'서술형 질문': {서술형 질문 내용}\n",
+      "'키워드': {키워드 목록}\n",
+      "'원래 질문': {원래 객관식 질문 내용}\n",
+      "'원래 선지': {원래 객관식 선지 목록}\n",
+      "'원래 정답': {원래 객관식 정답}\n",
+      "'선지별 해설': {각 선지에 대한 해설}\n",
+      "\n",
+      "**[출력 형식]**\n",
+      "모범답안: {생성된 모범답안}\n",
+      "\n",
+      "---\n",
+      "\n",
+      "이제 아래 입력 값에 대해 위의 역할, 수행 절차, 규칙에 따라 모범답안을 생성해주세요.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = llm.query_openrouter(system_prompt, user_prompt, model_name = 'google/gemini-2.5-pro')\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bf71508",
+   "metadata": {},
+   "source": [
+    "## 평가프롬프트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "69f4ad2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "다음 지시를 그대로 따르세요. 목적은 모델 답변이 모든 키워드를 포함하는지 여부만 판단하는 것입니다.\n",
+      "\n",
+      "역할\n",
+      "- 당신은 키워드 포함 여부만 판단하는 자동 채점기입니다.\n",
+      "\n",
+      "출력 형식\n",
+      "- 오직 True 또는 False만 출력합니다. 다른 문자, 공백, 설명, 기호를 절대 추가하지 마세요.\n",
+      "\n",
+      "입력\n",
+      "서술형 질문: {서술형질문}\n",
+      "키워드: {키워드}\n",
+      "----\n",
+      "모델 답변(평가대상): {모델답변}\n",
+      "\n",
+      "판단 규칙\n",
+      "- 평가는 오직 모델 답변이 키워드를 모두 포함하는지에 한정합니다. 질문의 내용 타당성은 고려하지 않습니다.\n",
+      "- 키워드 목록 파싱\n",
+      "  - 키워드가 JSON 배열 형태면 그대로 사용합니다. 예: [\"A\", \"B\"]\n",
+      "  - 그렇지 않으면 쉼표(,), 세미콜론(;), 슬래시(/), 개행(\\n)로 분리해 리스트를 만듭니다.\n",
+      "  - 각 키워드는 앞뒤 공백을 제거하고 양쪽 따옴표/괄호/불릿(예: \", ', “ ”, ( ), [ ], { }, -, •) 등 표식은 제거합니다.\n",
+      "  - 빈 문자열이 된 항목은 제외하고, 중복은 제거합니다.\n",
+      "- 정규화(모델 답변과 각 키워드 모두에 적용)\n",
+      "  - 유니코드 정규화(NFKC), 라틴 알파벳은 소문자로 변환합니다.\n",
+      "  - 문장부호와 특수기호(.,!?;:\"'()[]{}<>/~`+=_|\\)는 무시합니다.\n",
+      "  - 연속 공백은 하나로 축소하고 양끝 공백을 제거합니다.\n",
+      "- 매칭 기준\n",
+      "  - 키워드가 띄어쓰기를 포함하는 구(phrase)인 경우: 정규화된 답변 내에 해당 구가 부분 문자열로 존재하면 포함으로 간주합니다.\n",
+      "  - 키워드가 라틴 알파벳/숫자로만 이루어진 단어인 경우: 단어 경계 기준(영숫자와 비영숫자의 경계)으로 일치해야 포함으로 간주합니다. 예: \"ai\"는 \"aic\"에 포함된 것으로 보지 않음.\n",
+      "  - 한글/중국어/일본어 등 공백 구분이 느슨한 언어의 단어는 정규화된 답변에 해당 문자열이 부분적으로 그대로 나타나면 포함으로 간주합니다.\n",
+      "- 동의어, 축약어, 오탈자 치환 등 의미적 유사성은 고려하지 않습니다. 문자열 기준의 포함 여부만 판단합니다.\n",
+      "- 최종 판단: 모든 키워드가 포함되어 있으면 True, 하나라도 누락되면 False를 출력합니다.\n",
+      "\n",
+      "지금 입력을 평가하고 결과만 출력하세요.\n"
+     ]
+    }
+   ],
+   "source": [
+    "system_prompt = \"\"\"당신은 프롬프트 엔지니어입니다. 아래와 같은 서술형 문제와 답변을 받았을 때, 답변이 모든 키워드를 포함하는가를 확인하는 프롬프트를 작성해주세요.\n",
+    "하나라도 키워드가 빠진게 있다면 False, 모두 포함하면 True를 반환합니다.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "user_prompt = f\"\"\"\n",
+    "서술형 질문: {{서술형질문}}\n",
+    "키워드: {{키워드}}\n",
+    "----\n",
+    "모델 답변(평가대상): {{모델답변}}\n",
+    "\"\"\"\n",
+    "response = llm.query_openrouter(system_prompt, user_prompt, model_name = 'openai/gpt-5')\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f05ad28",
    "metadata": {},
    "outputs": [],
    "source": []
