--- a/서술형_키워드뽑기.ipynb
+++ b/서술형_키워드뽑기.ipynb
@@ -2,12 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "5983e72c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "import os, json\n",
+    "from tqdm import tqdm\n",
+    "from tools.core.llm_query import LLMQuery\n",
+    "\n",
+    "llm = LLMQuery()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fca910d",
+   "metadata": {},
+   "source": [
+    "## 옳지 않은 문제 중 해설 많은 애들 선별하기"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e82bc346",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 옳지 않은 것 문제들 중 해설 많은 애들 선별하기\n",
     "# import os, json\n",
     "# # from tools.pipeline.config import ONEDRIVE_PATH\n",
     "# ONEDRIVE_PATH = 'C:\\\\Users\\\\Jin\\\\Onedrive\\\\데이터L\\\\selectstar'\n",
@@ -106,8 +128,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc0f37d3",
+   "metadata": {},
+   "source": [
+    "# 키워드 뽑고 서술형 문제로 바꾸기"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "93e68b64",
    "metadata": {},
    "outputs": [
@@ -117,22 +147,19 @@
        "859"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from tools.pipeline.config import ONEDRIVE_PATH\n",
-    "import os, json\n",
-    "\n",
-    "full_explanation = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '7_multiple_rw', 'full_explanation.json')))\n",
+    "full_explanation = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '9_multiple_to_essay', 'full_explanation.json')))\n",
     "len(full_explanation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a51b7436",
    "metadata": {},
    "outputs": [],
@@ -152,8 +179,6 @@
     "4) 선지 분류: 해설을 근거로 틀린 선지 1개와 옳은 선지 3~4개를 식별하세요. 옳은 선지가 3개 미만이면 가능한 만큼만 사용하세요.\n",
     "   - 정답 표기가 있는 경우, 해설과의 정합성을 우선으로 판단하여 틀린 선지를 확정하세요.\n",
     "5) 키워드 추출: 틀린 선지 1개와 옳은 선지 3~4개 각각에서 핵심 개념을 1개씩 뽑아 키워드를 구성하세요. 총 5~10개 이내로 하며, 다음 원칙을 지키세요.\n",
-    "   - 정답이 바로 드러나지 않도록 수치·주기·임계치·예외 조건·직접적인 정오 표현을 추상화하십시오.\n",
-    "   - 예: “반기마다 개최” → “개최 주기”, “익일 신고” → “보고 시한”, “상장폐지사유” → “제재 요건”\n",
     "   - 중복 키워드는 제거하고, 명사구 중심으로 간결히 표현하세요.\n",
     "6) 출력은 정확히 두 줄만 생성하세요.\n",
     "   - 1행: 서술형 문제: 다음 키워드를 활용하여 [주제]에 관해 서술하시오.\n",
@@ -161,7 +186,7 @@
     "\n",
     "검증 체크리스트\n",
     "- 키워드는 10개 이내인가?\n",
-    "- 키워드에 구체 수치·주기·정답을 직설적으로 드러내는 표현이 없는가?\n",
+    "- 키워드가 주제를 적절하게 반영하고 있는가?\n",
     "- 주제 문구가 명확하고 간결한가?\n",
     "\n",
     "예시 입력 형식\n",
@@ -177,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6f2f4e09",
    "metadata": {},
    "outputs": [
@@ -185,16 +210,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 859/859 [24:58<00:00,  1.74s/it]\n"
+      "100%|██████████| 859/859 [25:24<00:00,  1.78s/it]\n"
      ]
     }
    ],
    "source": [
-    "from tqdm import tqdm\n",
-    "from tools.core.llm_query import LLMQuery\n",
-    "\n",
-    "llm = LLMQuery()\n",
-    "\n",
     "for q in tqdm(full_explanation):\n",
     "    user_prompt = f\"\"\"\n",
     "========= 문제 ========\n",
@@ -204,56 +224,64 @@
     "- 해설: {q['explanation']}\n",
     "\"\"\"\n",
     "    response = llm.query_openrouter(system_prompt, user_prompt, model_name = 'google/gemini-2.5-flash')\n",
-    "    q['essay_question'], q['essay_keyword'] = response.strip().split('\\n')"
+    "    q['essay_question'], q['essay_keyword'] = response.strip().split('\\n')\n",
+    "    q['essay_question'] = q['essay_question'].replace('서술형 문제: ', '')\n",
+    "    q['essay_keyword'] = q['essay_keyword'].replace('키워드: ', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1c2d81ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '7_multiple_rw', 'full_explanation_essay.json'), 'w', encoding='utf-8') as f:\n",
+    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '9_multiple_to_essay', 'essay_w_keyword.json'), 'w', encoding='utf-8') as f:\n",
     "    json.dump(full_explanation, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "34ceda53",
+   "execution_count": 6,
+   "id": "bcac10e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'file_id': 'SS03015',\n",
+       " 'title': 'SD에듀 보험계리사 1차 한권으로 끝내기 5권 (기출문제해설)',\n",
+       " 'chapter': '문제편',\n",
+       " 'tag': 'q_0026_0003',\n",
+       " 'domain': '경제',\n",
+       " 'subdomain': '미시경제학',\n",
+       " 'classification_reason': '독점적 경쟁시장 특징과 장기균형, 시장이론 핵심',\n",
+       " 'is_calculation': False,\n",
+       " 'question': '독점적 경쟁시장에 관한 설명으로 옳지 않은 것은?',\n",
+       " 'options': ['① 수많은 공급자가 가격 수용자로 행동한다.',\n",
+       "  '② 장기균형에서 기업들의 경제학적 이윤은 0이다.',\n",
+       "  '③ 장기균형에서는 평균비용곡선의 최저점보다 더 적은 양을 생산한다.',\n",
+       "  '④ 수많은 공급자가 서로 차별화된 상품을 공급하지만, 공급된 상품들의 대체성이 높다.'],\n",
+       " 'answer': '①',\n",
+       " 'explanation': '독점적 경쟁시장에서 공급자는 가격 수용자가 아니라 가격 설정자로서 행동한다.\\n② 독점적 경쟁시장에 기업들은 정상이윤만 획득하기에 경제학적 이윤은 0이 된다.\\n③ 독점적 경쟁시장에서 장기균형조건은 P=SAC=LAC>MR=SMC=LMC 이므로 생산량은 평균비용곡선의 최저점보다 적은 양을 생산한다.\\n④ 차별화된 상품들이 재화에 근본적인 차이가 날 정도로 차이가 존재하지 않아 공급된 상품들의 대체성이 높다.',\n",
+       " 'answer_type': 'wrong',\n",
+       " 'essay_question': '다음 키워드를 활용하여 독점적 경쟁시장에 관해 서술하시오.',\n",
+       " 'essay_keyword': '가격 설정자, 경제학적 이윤 0, 평균비용곡선 최저점, 차별화된 상품, 높은 대체성'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_explanation[0]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0815c0ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e7ab4fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ff52a7b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1b7ed2e",
+   "id": "70d2dade",
    "metadata": {},
    "outputs": [],
    "source": []
