--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "i = 2\n",
     "\n",
     "\n",
-    "excel_analy = pd.read_excel(os.path.join(base_path, 'book_list_ALL.xlsx'), sheet_name=analysis[i], header=3)[['관리번호', 'ISBN', '도서명', '분류']]"
+    "excel = pd.read_excel(os.path.join(base_path, 'book_list_ALL.xlsx'), sheet_name=analysis[i], header=3)[['관리번호', 'ISBN', '도서명', '분류']]"
    ]
   },
   {
@@ -80,46 +80,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import shutil\n",
-    "# from tqdm import tqdm\n",
+    "import shutil\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# zip_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/zip/250826_1차_원천코퍼스_보완사항반영\"\n",
-    "# original_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C\"\n",
+    "zip_path = '/Users/jinym/Downloads/14.251124_2,3차잔여도서_원천코퍼스'\n",
+    "original_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C\"\n",
     "\n",
-    "# error_list = []\n",
+    "error_list = []\n",
     "\n",
-    "# for fn, tn, isbn, lv in tqdm(zip(excel_analy['관리번호_old'], excel_analy['관리번호'], excel_analy['ISBN'], excel_analy['분류'])):\n",
-    "#    fn = str(fn)\n",
-    "#    if '/' in lv: \n",
-    "#       lv = lv.replace(\"/\", '_')\n",
+    "for tn, isbn, lv in tqdm(zip(excel['관리번호'], excel['ISBN'], excel['분류'])):\n",
+    "   if '/' in lv: \n",
+    "      lv = lv.replace(\"/\", '_')\n",
     "   \n",
-    "#    if 'Lv' not in lv:\n",
-    "#       continue\n",
+    "   if 'Lv' not in lv:\n",
+    "      continue\n",
     "\n",
-    "#    # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
-    "#    if lv == 'Lv2':\n",
-    "#       # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mkdir {tn} && mv {tn}.json {tn}/\")\n",
-    "#       continue\n",
-    "#    else:\n",
-    "#       os.system(f\"cp {zip_path}/{fn}.zip {original_path}/{lv}/{tn}.zip && cd {original_path}/{lv} && mkdir {tn} && unzip {tn}.zip -d {tn} && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
+    "   # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
+    "   if lv == 'Lv2':\n",
+    "      # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mkdir {tn} && mv {tn}.json {tn}/\")\n",
+    "      continue\n",
+    "   else:\n",
+    "      os.system(f\"cp {zip_path}/{tn}.zip {original_path}/{lv}/{tn}.zip && cd {original_path}/{lv} && mkdir {tn} && unzip {tn}.zip -d {tn}\")\n",
+    "                # && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
     "\n",
-    "#       file_path = f\"{original_path}/{lv}/{tn}/{tn}.json\"\n",
-    "#       try:\n",
-    "#          with open(file_path, 'r', encoding='utf-8') as f:\n",
-    "#                content = f.read()\n",
+    "      file_path = f\"{original_path}/{lv}/{tn}/{tn}.json\"\n",
+    "      try:\n",
+    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "               content = f.read()\n",
+    "        \n",
+    "        with open(file_path.replace(\".json\", \".json.bak\"), 'w', encoding='utf-8') as f:\n",
+    "               f.write(content)\n",
+    "\n",
+    "         # Replace the old filename with new filename\n",
+    "        #  updated_content = content.replace(str(fn), str(tn))\n",
+    "        updated_content = {\n",
+    "            'file_id': id,\n",
+    "            'ISBN': str(excel.loc[id, 'ISBN']),\n",
+    "            'title': excel.loc[id, '도서명'],\n",
+    "            'cat1_domain': excel.loc[id, '코퍼스 1분류'],\n",
+    "            'cat2_sub': excel.loc[id, '코퍼스 2분류'],\n",
+    "            'cat3_specific': excel.loc[id, '비고'],\n",
+    "            'pub_date': str(excel.loc[id, '출판일'])[:10],\n",
+    "            # 'contents': [],\n",
+    "            'contents': content['contents']\n",
+    "        }\n",
     "         \n",
-    "#          # Replace the old filename with new filename\n",
-    "#          updated_content = content.replace(str(fn), str(tn))\n",
-    "         \n",
-    "#          with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "#                f.write(updated_content)\n",
+    "        with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "               f.write(updated_content)\n",
     "               \n",
-    "#          print(f\"Updated {fn} to {tn} in {file_path}\")\n",
-    "#       except Exception as e:\n",
-    "#          print(f\"Error processing {fn} to {tn}: {e}\")\n",
-    "#          error_list.append((fn, tn, lv))\n",
-    "#          # 이름 바꾸기\n",
-    "#          # os.system(f\"cd {original_path}/{lv} && mkdir {tn} && unzip {tn}.zip -d {tn} && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")"
+    "        # print(f\"Updated {fn} to {tn} in {file_path}\")\n",
+    "        print(f\"Unzip {tn}.zip\")\n",
+    "\n",
+    "      except Exception as e:\n",
+    "        #  print(f\"Error processing {fn} to {tn}: {e}\")\n",
+    "        print(f\"Error processing {tn}: {e}\")\n",
+    "        #  error_list.append((fn, tn, lv))\n",
+    "        error_list.append(tn)\n",
+    "         # 이름 바꾸기\n",
+    "         # os.system(f\"cd {original_path}/{lv} && mkdir {tn} && unzip {tn}.zip -d {tn} && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")"
    ]
   },
   {
@@ -348,35 +367,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Fixed version - using Python file operations instead of sed\n",
-    "# import shutil\n",
-    "# from tqdm import tqdm\n",
-    "# import fitz\n",
+    "# Fixed version - using Python file operations instead of sed\n",
+    "import shutil\n",
+    "from tqdm import tqdm\n",
+    "import fitz\n",
     "\n",
-    "# dpi = 300\n",
-    "# mat = fitz.Matrix(dpi / 150, dpi / 150)\n",
+    "dpi = 300\n",
+    "mat = fitz.Matrix(dpi / 150, dpi / 150)\n",
     "\n",
-    "# # for tn, isbn, lv in tqdm(zip(excel_analy['관리번호'], excel_analy['ISBN'], excel_analy['분류'])):\n",
-    "# for tn in tqdm(excel_analy['관리번호']):\n",
-    "#    # if '/' in lv: \n",
-    "#    #    lv = lv.replace(\"/\", '_')\n",
+    "# for tn, isbn, lv in tqdm(zip(excel_analy['관리번호'], excel_analy['ISBN'], excel_analy['분류'])):\n",
+    "for tn in tqdm(excel_analy['관리번호']):\n",
+    "   # if '/' in lv: \n",
+    "   #    lv = lv.replace(\"/\", '_')\n",
     "   \n",
-    "#    # if 'Lv' not in lv:\n",
-    "#    #    continue\n",
-    "#    lv = excel_analy[excel_analy['관리번호'] == tn]['분류'].tolist()[0]\n",
-    "#    # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
-    "#    if lv == 'Lv2':\n",
-    "#       os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2 && mkdir {tn} && mv {tn}*.json {tn}/ && cd {tn} && mkdir pdf_page\")\n",
-    "#       # pdf_page 만들기\n",
-    "#       pdf_path = f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv1/{tn}.pdf\"\n",
-    "#       doc = fitz.open(pdf_path)\n",
-    "#       for p, page in enumerate(doc):\n",
-    "#          img = page.get_pixmap(matrix=mat)\n",
-    "#          img.save(f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2/{tn}/pdf_page/{tn}_{p+1:04d}.png\")\n",
+    "   # if 'Lv' not in lv:\n",
+    "   #    continue\n",
+    "   lv = excel_analy[excel_analy['관리번호'] == tn]['분류'].tolist()[0]\n",
+    "   # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
+    "   if lv == 'Lv2':\n",
+    "      os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2 && mkdir {tn} && mv {tn}*.json {tn}/ && cd {tn} && mkdir pdf_page\")\n",
+    "      # pdf_page 만들기\n",
+    "      pdf_path = f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv1/{tn}.pdf\"\n",
+    "      doc = fitz.open(pdf_path)\n",
+    "      for p, page in enumerate(doc):\n",
+    "         img = page.get_pixmap(matrix=mat)\n",
+    "         img.save(f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2/{tn}/pdf_page/{tn}_{p+1:04d}.png\")\n",
     "      \n",
-    "#       # break\n",
+    "      break\n",
     "\n",
-    "#    # SS0041 - SS0045 사이에서 MuPDF error: syntax error: invalid key in dict"
+    "   # SS0041 - SS0045 사이에서 MuPDF error: syntax error: invalid key in dict"
    ]
   },
   {
@@ -394,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -408,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
