[251127] 신규 도서 파일 옮기기 (실패)

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -58,20 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
+    "from tools.core.utils import FileManager\n",
     "\n",
-    "base_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar\"\n",
-    "analysis = {1:'1차 분석', 2:'2차 분석', 3: '3차 분석'}\n",
-    "buy = {1:'1차 구매', 2:'2차 구매', 3: '3차 구매'}\n",
     "i = 2\n",
-    "\n",
-    "\n",
-    "excel = pd.read_excel(os.path.join(base_path, 'book_list_ALL.xlsx'), sheet_name=analysis[i], header=3)[['관리번호', 'ISBN', '도서명', '분류']]"
+    "file_manager = FileManager()\n",
+    "excel = file_manager.load_excel_metadata(i)"
    ]
   },
   {
@@ -80,65 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# zip_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/zip/250826_1차_원천코퍼스_보완사항반영\"\n",
-    "zip_path = '/Users/jinym/Downloads/14.251124_2,3차잔여도서_원천코퍼스'\n",
-    "original_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C\"\n",
-    "\n",
-    "error_list = []\n",
-    "\n",
-    "for tn, isbn, lv in tqdm(zip(excel['관리번호'], excel['ISBN'], excel['분류'])):\n",
-    "   if '/' in lv: \n",
-    "      lv = lv.replace(\"/\", '_')\n",
-    "   \n",
-    "   if 'Lv' not in lv:\n",
-    "      continue\n",
-    "\n",
-    "   # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
-    "   if lv == 'Lv2':\n",
-    "      # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mkdir {tn} && mv {tn}.json {tn}/\")\n",
-    "      continue\n",
-    "   else:\n",
-    "      os.system(f\"cp {zip_path}/{tn}.zip {original_path}/{lv}/{tn}.zip && cd {original_path}/{lv} && mkdir {tn} && unzip {tn}.zip -d {tn}\")\n",
-    "                # && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
-    "\n",
-    "      file_path = f\"{original_path}/{lv}/{tn}/{tn}.json\"\n",
-    "      try:\n",
-    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
-    "               content = f.read()\n",
-    "        \n",
-    "        with open(file_path.replace(\".json\", \".json.bak\"), 'w', encoding='utf-8') as f:\n",
-    "               f.write(content)\n",
-    "\n",
-    "         # Replace the old filename with new filename\n",
-    "        #  updated_content = content.replace(str(fn), str(tn))\n",
-    "        updated_content = {\n",
-    "            'file_id': id,\n",
-    "            'ISBN': str(excel.loc[id, 'ISBN']),\n",
-    "            'title': excel.loc[id, '도서명'],\n",
-    "            'cat1_domain': excel.loc[id, '코퍼스 1분류'],\n",
-    "            'cat2_sub': excel.loc[id, '코퍼스 2분류'],\n",
-    "            'cat3_specific': excel.loc[id, '비고'],\n",
-    "            'pub_date': str(excel.loc[id, '출판일'])[:10],\n",
-    "            # 'contents': [],\n",
-    "            'contents': content['contents']\n",
-    "        }\n",
-    "         \n",
-    "        with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "               f.write(updated_content)\n",
-    "               \n",
-    "        # print(f\"Updated {fn} to {tn} in {file_path}\")\n",
-    "        print(f\"Unzip {tn}.zip\")\n",
-    "\n",
-    "      except Exception as e:\n",
-    "        #  print(f\"Error processing {fn} to {tn}: {e}\")\n",
-    "        print(f\"Error processing {tn}: {e}\")\n",
-    "        #  error_list.append((fn, tn, lv))\n",
-    "        error_list.append(tn)\n",
-    "         # 이름 바꾸기\n",
-    "         # os.system(f\"cd {original_path}/{lv} && mkdir {tn} && unzip {tn}.zip -d {tn} && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")"
+    "excel.columns"
    ]
   },
   {
@@ -151,34 +88,72 @@
     "from tqdm import tqdm\n",
     "import os, json\n",
     "\n",
-    "original_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/2C/Lv5\"\n",
-    "final_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/2C/Lv5\"\n",
+    "# zip_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/zip/250826_1차_원천코퍼스_보완사항반영\"\n",
+    "zip_path = '/Users/jinym/Downloads/14.251124_2,3차잔여도서_원천코퍼스'\n",
+    "original_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C\"\n",
+    "final_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/{i}C\"\n",
     "\n",
-    "for file in os.listdir(original_path):\n",
-    "    if not file.startswith('SS'):\n",
-    "        continue\n",
+    "error_list = []\n",
+    "for id in tqdm(os.listdir(zip_path)):\n",
+    "# if True:\n",
+    "   # id = 'SS0174'\n",
+    "  if not id.startswith('SS'):\n",
+    "    continue\n",
     "\n",
-    "    with open(os.path.join(final_path, file, file+'.json.bak'), 'r', encoding='utf-8') as f:\n",
-    "        data = json.load(f)\n",
+    "  id = id.replace('.zip', '')\n",
+    "   \n",
+    "  try:\n",
+    "      lv = excel.loc[id, '분류']\n",
+    "  except Exception as e:\n",
+    "      error_list.append({'id':id, 'error': \"excel error\"})\n",
+    "      continue\n",
+    "  \n",
+    "  if '/' in lv: \n",
+    "      lv = lv.replace(\"/\", '_')\n",
     "\n",
-    "    with open(os.path.join(original_path, file, file+'.json'), 'r', encoding='utf-8') as f:\n",
-    "        new_data = json.load(f)\n",
+    "  if 'Lv' not in lv:\n",
+    "      continue\n",
+    "  \n",
+    "  # os.system(f\"cp {zip_path}/{id}.zip {original_path}/{lv}/{id}.zip && cd {original_path}/{lv} && mkdir {id} && unzip {id}.zip -d {id}\")\n",
+    "  # os.system(f\"mkdir {final_path}/{lv}/{id} && cp {original_path}/{lv}/{id}/{id}.json {final_path}/{lv}/{id}/ && cp -r {original_path}/{lv}/{id}/crop {final_path}/{lv}/{id}/\")\n",
+    "                # && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
+    "  # 위에 실패했을 때 따로\n",
+    "  os.system(f\"cp {original_path}/{lv}/{id}/{id}.json {final_path}/{lv}/{id}/ && cp -r {original_path}/{lv}/{id}/crop {final_path}/{lv}/{id}/\")\n",
     "\n",
-    "    # str_data = str(data)\n",
-    "    # str_new_data = str(new_data)\n",
-    "    # 'contents' 위치 찾기\n",
-    "    # contents_pos_new = str_new_data.find('contents')\n",
-    "    # contents_pos_data = str_data.find('contents')\n",
+    "  try:\n",
+    "      file_path = f\"{final_path}/{lv}/{id}/{id}.json\"\n",
+    "      with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "          content = json.load(f)\n",
+    "        \n",
+    "      with open(file_path.replace(\".json\", \".json.bak\"), 'w', encoding='utf-8') as f:\n",
+    "          json.dump(content, f, ensure_ascii=False, indent=4)\n",
     "\n",
-    "    # 슬라이싱을 사용하여 'contents' 이전 부분만 교체\n",
-    "    # result = str_data[:contents_pos_data] + str_new_data[contents_pos_new:]\n",
-    "    # break\n",
-    "    with open(os.path.join(final_path, file, file+'.json'), 'w', encoding='utf-8') as f:\n",
-    "        json.dump(new_data, f, ensure_ascii=False, indent=4)\n",
-    "\n",
-    "\n",
-    "    # os.system(f\"cd {original_path} && mv -f {file}/{file}.json Lv5/{file}/ && rm -rf Lv5/{file}/crop && mv -f {file}/crop Lv5/{file}/\")\n",
-    "    # os.system(f\"cd {original_path}/{file} && rmdir pdf_page && cd .. && rmdir {file}\")"
+    "      updated_content = {\n",
+    "            'file_id': id,\n",
+    "            'ISBN': str(excel.loc[id, 'ISBN']),\n",
+    "            'title': excel.loc[id, '도서명'],\n",
+    "            'cat1_domain': excel.loc[id, '코퍼스 1분류'],\n",
+    "            'cat2_sub': excel.loc[id, '코퍼스 2분류'],\n",
+    "            'cat3_specific': excel.loc[id, '비고'],\n",
+    "            'pub_date': str(excel.loc[id, '출판일'])[:10],\n",
+    "            # 'contents': [],\n",
+    "            'contents': content['contents']\n",
+    "        }\n",
+    "      # break\n",
+    "      with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "               json.dump(updated_content, f, ensure_ascii=False, indent=4)\n",
+    "  \n",
+    "  except Exception as e:\n",
+    "      error_list.append({'id':id, 'error': e})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_list"
    ]
   },
   {
@@ -252,18 +227,6 @@
    "metadata": {},
    "source": [
     "## 전체 돌리기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tools.ProcessFiles as pf\n",
-    "\n",
-    "excel = pf.get_excel_data(2)\n",
-    "excel"
    ]
   },
   {
@@ -367,35 +330,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fixed version - using Python file operations instead of sed\n",
-    "import shutil\n",
-    "from tqdm import tqdm\n",
-    "import fitz\n",
+    "# # Fixed version - using Python file operations instead of sed\n",
+    "# import shutil\n",
+    "# from tqdm import tqdm\n",
+    "# import fitz\n",
     "\n",
-    "dpi = 300\n",
-    "mat = fitz.Matrix(dpi / 150, dpi / 150)\n",
+    "# dpi = 300\n",
+    "# mat = fitz.Matrix(dpi / 150, dpi / 150)\n",
     "\n",
-    "# for tn, isbn, lv in tqdm(zip(excel_analy['관리번호'], excel_analy['ISBN'], excel_analy['분류'])):\n",
-    "for tn in tqdm(excel_analy['관리번호']):\n",
-    "   # if '/' in lv: \n",
-    "   #    lv = lv.replace(\"/\", '_')\n",
+    "# # for tn, isbn, lv in tqdm(zip(excel_analy['관리번호'], excel_analy['ISBN'], excel_analy['분류'])):\n",
+    "# for tn in tqdm(excel_analy['관리번호']):\n",
+    "#    # if '/' in lv: \n",
+    "#    #    lv = lv.replace(\"/\", '_')\n",
     "   \n",
-    "   # if 'Lv' not in lv:\n",
-    "   #    continue\n",
-    "   lv = excel_analy[excel_analy['관리번호'] == tn]['분류'].tolist()[0]\n",
-    "   # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
-    "   if lv == 'Lv2':\n",
-    "      os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2 && mkdir {tn} && mv {tn}*.json {tn}/ && cd {tn} && mkdir pdf_page\")\n",
-    "      # pdf_page 만들기\n",
-    "      pdf_path = f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv1/{tn}.pdf\"\n",
-    "      doc = fitz.open(pdf_path)\n",
-    "      for p, page in enumerate(doc):\n",
-    "         img = page.get_pixmap(matrix=mat)\n",
-    "         img.save(f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2/{tn}/pdf_page/{tn}_{p+1:04d}.png\")\n",
+    "#    # if 'Lv' not in lv:\n",
+    "#    #    continue\n",
+    "#    lv = excel_analy[excel_analy['관리번호'] == tn]['분류'].tolist()[0]\n",
+    "#    # os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
+    "#    if lv == 'Lv2':\n",
+    "#       os.system(f\"cd /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2 && mkdir {tn} && mv {tn}*.json {tn}/ && cd {tn} && mkdir pdf_page\")\n",
+    "#       # pdf_page 만들기\n",
+    "#       pdf_path = f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv1/{tn}.pdf\"\n",
+    "#       doc = fitz.open(pdf_path)\n",
+    "#       for p, page in enumerate(doc):\n",
+    "#          img = page.get_pixmap(matrix=mat)\n",
+    "#          img.save(f\"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv2/{tn}/pdf_page/{tn}_{p+1:04d}.png\")\n",
     "      \n",
-    "      break\n",
+    "#       break\n",
     "\n",
-    "   # SS0041 - SS0045 사이에서 MuPDF error: syntax error: invalid key in dict"
+    "#    # SS0041 - SS0045 사이에서 MuPDF error: syntax error: invalid key in dict"
    ]
   },
   {
